# cxx-module-template

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: AddModuleLib.cmake  std.cmake
src/: CMakeLists.txt  main.cc
src/modules/: CMakeLists.txt
src/modules/hello/: CMakeLists.txt  hello.cc  hello_part1.cc
src/modules/preinlude/: CMakeLists.txt  preinclude.cc
src/modules/tests/: CMakeLists.txt  test.cc  test_sub1.cc
